tests/haste_use_name_reducers/haste_use_name_reducers.exp
Error ----------------------------------------------------------------------------------------------------- index.js:3:1

Cannot cast `require(...)` to boolean because `Decl` [1] is incompatible with boolean [2]. [incompatible-cast]

   index.js:3:1
   3| require('Module1') as boolean;
      ^^^^^^^^^^^^^^^^^^

References:
   dir1/Module1.js.flow:7:32
   7| module.exports = new Decl() as Decl;
                                     ^^^^ [1]
   index.js:3:23
   3| require('Module1') as boolean;
                            ^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- index.js:6:9

Cannot resolve module `Module4`. [cannot-resolve-module]

   6| require('Module4');
              ^^^^^^^^^



Found 2 errors
